feat: Add goal to maze and end game when reached
The code changes include:
- Added a goal to the maze for players to reach
- Updated the maze generation to include the goal
- Updated the updatePosition event to check if the game is over before updating positions
- Broadcasted the updated positions to viewers in the room when the goal is reached
- Set the gameOver flag to true when the goal is reached

Recent user commits:
- Update game room functionality and user experience
- Improve game room functionality and user experience
- Add random color and position to new users in game room
- Generate maze dynamically for each game room

Recent repository commits:
- Hopefully fixed fullscreen on Apple devices
- Updated frontend for all pages, added navigation, cleaned redundant code, added fullscreen options, formatted canvas
- Added functionalities v2
- Merged branch 'main' of https://github.com/waveyboym/bbd-mazemotion
- Added functionalities v1

--- a/public/room.html
+++ b/public/room.html
@@ -50,6 +50,7 @@
       let ball = { x: 1, y: 1 };
       let ballcol = 'red';
       const cellSize = 7;
+      let gameEnd = false;
 
       window.addEventListener('keydown', event => {
           switch (event.key) {
@@ -165,6 +166,14 @@
                 drawOpponentsBall(data.Users[i].position, data.Old[i].position, ctx, cellSize, data.Users[i].color);
               }
             }
+      });
+
+      socket.on("gameEnded", (data) => {
+        document.getElementById("status").innerText = `Game ended! Winner: ${data.id}`;
+        document.getElementById("startGame").style.display = "none";
+        document.getElementById("pauseButton").style.display = "none";
+        document.getElementById("timer").style.display = "none";
+        gameEnd = true;
       });
 
       document.addEventListener("DOMContentLoaded", function () {
@@ -293,6 +302,8 @@
         }
 
         function moveBall(maze, ball, dx, dy, ctx, cellSize) {
+            if(isPaused) return;
+            if(maze[ball.y][ball.x] === 2 || gameEnd) {return;}
             const newX = ball.x + dx;
             const newY = ball.y + dy;
             if (newX >= 0 && newX < maze[0].length && newY >= 0 && newY < maze.length && (maze[newY][newX] === 0 || maze[newY][newX] === 2)) {
