feat: Enable device motion permission for ball movement
The code changes include:
- Added code to request device motion permission for ball movement
- Conditionally added event listener for device motion based on permission state

Recent user commits:
- PLEASE V2
- PLEASE
- GYRO PLEASE WORK

Recent repository commits:
- Hopefully fixed fullscreen on Apple devices
- Updated frontend for all pages, added navigation, cleaned redundant code, added fullscreen options, formatted canvas
- Added functionalities v2
- Merged branch 'main' of https://github.com/waveyboym/bbd-mazemotion
- Added functionalities v1

--- a/public/room.html
+++ b/public/room.html
@@ -318,6 +318,22 @@
             }
         }
 
+        window.onload = function() {
+            if (typeof DeviceMotionEvent.requestPermission === 'function') {
+                DeviceMotionEvent.requestPermission()
+                .then((state) => {
+                    if (state === 'granted') {
+                    window.addEventListener('devicemotion', handleOrientation);
+                    } else {
+                    console.error('Request to access the orientation was rejected');
+                    }
+                })
+                .catch(console.error);
+            } else {
+                window.addEventListener('devicemotion', handleOrientation);
+            }
+        }
+
         let maxSpeed = 1; // Define a reasonable max speed for the ball movement.
         let ballVelX = 0;
         let ballVelY = 0;
@@ -339,8 +355,6 @@
           document.getElementById('x').innerText = dx;
           document.getElementById('y').innerText = dy;
         }
-
-        window.addEventListener('deviceorientation', handleOrientation);
 
     </script>
   </body>
