jhlbda hioegr hunio egr huinaegrghuio aegrf ghuio  aegrhuip aegr huip egr ahuip aegr bhuio aegr gyuip aegr iu

--- a/public/room.html
+++ b/public/room.html
@@ -4,6 +4,7 @@
     <title>Maze Motion | Lobby </title>
     <link rel="stylesheet" href="../style/style.css" />
     <script src="script.js"></script>
+    <script src="../gyro/gyro.js"></script>
   </head>
   <body>
     <header>
@@ -17,8 +18,9 @@
     <br>
     <div id="players"></div>
     <br>
-    <div id="x"></div>
-    <div id="y"></div>
+    <div id="gyroX"></div>
+    <div id="gyroY"></div>
+    <div id="gyroZ"></div>
     <div id="controls">
       <button id="startGame">Start Game</button>
     </div>
