--- a/public/room.html
+++ b/public/room.html
@@ -4,7 +4,7 @@
     <title>Maze Motion | Lobby </title>
     <link rel="stylesheet" href="../style/style.css" />
     <script src="script.js"></script>
-    <script src="../gyro/gyro.js"></script>
+    <script src="gyro.js"></script>
   </head>
   <body>
     <header>
