feat: Move gyro initialization to fix runtime issue
The code changes include:
- Removed the script tag for 'main.js' from the HTML file
- Moved the initialization of the gyro event listener to a separate function
- Added the function to handle device orientation events and update the X, Y, and Z values on the page

Recent user commits:
- Moved gyro so it should run
- Reverting to old Gyro

Recent repository commits:
- Hopefully fixed fullscreen on Apple devices
- Updated frontend for all pages, added navigation, cleaned redundant code, added fullscreen options, formatted canvas
- Added functionalities v2
- Merged branch 'main' of https://github.com/waveyboym/bbd-mazemotion
- Added functionalities v1

--- a/public/room.html
+++ b/public/room.html
@@ -41,7 +41,6 @@
     </div>
     <button id="back">&lt;-</button>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="main.js"></script>
 
     <script>
       const socket = io();
@@ -72,6 +71,23 @@
                   moveBall(maze, ball, 1, 0, ctx, cellSize);
                   break;
           }
+      });
+
+      function handleOrientation(event) {
+          const x_val = event.alpha;
+          const y_val = event.beta;
+          const z_val = event.gamma;
+          x.innerText = "X: " + Math.round(x_val);
+          y.innerText = "Y: " + Math.round(y_val);
+          z.innerText = "Z: " + Math.round(z_val);
+      }
+
+      window.addEventListener("load", function () {
+          var x = document.getElementById("gyroX");   
+          var y = document.getElementById("gyroY");
+          var z = document.getElementById("gyroZ");
+
+          window.addEventListener('deviceorientation', handleOrientation);
       });
 
       function requestPerm() {
