--- a/public/room.html
+++ b/public/room.html
@@ -55,27 +55,20 @@
       let ballcol = 'red';
       const cellSize = 7;
       let gameEnd = false;
-      let sensitivity = 0.009;
-      let velocity = {x: 0, y:0};
-      let friction = 0.98;
 
       window.addEventListener('keydown', event => {
           switch (event.key) {
               case 'ArrowUp':
-                    velocity.y -= sensitivity * 10;
-                    event.preventDefault();
+                  moveBall(maze, ball, 0, -1, ctx, cellSize);
                   break;
               case 'ArrowDown':
-                   velocity.y += sensitivity * 10;
-                   event.preventDefault();
+                  moveBall(maze, ball, 0, 1, ctx, cellSize);
                   break;
               case 'ArrowLeft':
-                  velocity.x -= sensitivity * 10;
-                  event.preventDefault();
+                  moveBall(maze, ball, -1, 0, ctx, cellSize);
                   break;
               case 'ArrowRight':
-                  velocity.x += sensitivity * 10;
-                  event.preventDefault();
+                  moveBall(maze, ball, 1, 0, ctx, cellSize);
                   break;
           }
       });
@@ -355,10 +348,10 @@
         }
 
         function moveBall(maze, ball, dx, dy, ctx, cellSize) {
+            if(isPaused) return;
             if(maze[ball.y][ball.x] === 2 || gameEnd) {return;}
             const newX = ball.x + dx;
             const newY = ball.y + dy;
-
             if (newX >= 0 && newX < maze[0].length && newY >= 0 && newY < maze.length && (maze[newY][newX] === 0 || maze[newY][newX] === 2)) {
                 clearBall(ball, ctx, cellSize);
                 ball.x = newX;
